@@ -1,17 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
-	metal:use-macro="here/main_template/macros/master"
-	i18n:domain="indicators">
-	<head>
-		<title tal:content="context/Title"></title>
-	</head>
-	<body>
-		<div metal:fill-slot="main">
-			<h1>Wizards</h1>
-
-			<h3>Assessment operations</h3>
-
-		</div>
-	</body>
-</html>
-
-
